--- a/index.html
+++ b/index.html
@@ -123,17 +123,32 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="photo-set">
             <li class="photo">
-              <img src="./images/img5.jpg" alt="Фото процесса набора кода" width="370" />
+              <div class="photo-set-thumb">
+                <img src="./images/img5.jpg" alt="Фото процесса набора кода" width="370" />
+                <div class="photo-set-decor">
+                  <p class="photo-set-text">Десктопные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="photo">
-              <img
-                src="./images/img6.jpg"
-                alt="Фото процесса разработки дизайна мобильного приложения"
-                width="370"
-              />
+              <div class="photo-set-thumb">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Фото процесса разработки дизайна мобильного приложения"
+                  width="370"
+                />
+                <div class="photo-set-decor">
+                  <p class="photo-set-text">Мобильные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="photo">
-              <img src="./images/img7.jpg" alt="Фото карты цветов на планшете" width="370" />
+              <div class="photo-set-thumb">
+                <img src="./images/img7.jpg" alt="Фото карты цветов на планшете" width="370" />
+                <div class="photo-set-decor">
+                  <p class="photo-set-text">Дизайнерские решения</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
