--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             </h1>
             <button class="button" type="button">Заказать услугу</button>
           </div>
+          <div class="backdrop">
+            <div class="modal"></div>
+          </div>
         </section>
       </div>
       <!--Статьи-->
