--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
               Эффективные решения <br />
               для вашего бизнеса
             </h1>
-            <button class="button" type="button">Заказать услугу</button>
+            <button class="button" type="button" data-modal-open>Заказать услугу</button>
           </div>
-          <div class="backdrop">
-            <div class="modal"></div>
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button data-modal-close>Закрыть</button>
+            </div>
           </div>
         </section>
       </div>
@@ -428,5 +430,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
