--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         <nav class="navigation">
           <a class="logo logo-header link" href="./index.html"><span>Web</span>Studio</a>
           <ul class="site-nav">
-            <li class="site-nav-element"><a class="link current" href="./index.html">Студия</a></li>
-            <li class="site-nav-element"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="site-nav-element"><a class="link" href="">Контакты</a></li>
+            <li class="site-nav-element">
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li class="site-nav-element">
+              <a class="link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="site-nav-element">
+              <a class="link" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
 
