--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
           </div>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <button data-modal-close>Закрыть</button>
+              <button class="button-close" data-modal-close>
+                <svg class="button-close-svg">
+                  <use href="/images/symbol-defs.svg#button-close"></use>
+                </svg>
+              </button>
             </div>
           </div>
         </section>
