--- a/portfolio.html
+++ b/portfolio.html
@@ -82,166 +82,184 @@
         <div class="container">
           <ul class="portfolio-card-set list">
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img8.jpg" alt="Ноутбук" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img8.jpg" alt="Ноутбук" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Технокряк</h2>
-                  <p class="portfolio-card-text">Веб-сайт</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Технокряк</h2>
+                    <p class="portfolio-card-text">Веб-сайт</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img9.jpg" alt="Два боскетболиста с мячем" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img9.jpg" alt="Два боскетболиста с мячем" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="portfolio-card-text">Дизайн</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-card-text">Дизайн</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img10.jpg" alt="Емблема ресторана Сифуд" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img10.jpg" alt="Емблема ресторана Сифуд" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Ресторан Seafood</h2>
-                  <p class="portfolio-card-text">Приложение</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Ресторан Seafood</h2>
+                    <p class="portfolio-card-text">Приложение</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img11.jpg" alt="Наушники" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img11.jpg" alt="Наушники" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Проект Prime</h2>
-                  <p class="portfolio-card-text">Маркетинг</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Проект Prime</h2>
+                    <p class="portfolio-card-text">Маркетинг</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img12.jpg" alt="Две бумажные коробки" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img12.jpg" alt="Две бумажные коробки" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Проект Boxes</h2>
-                  <p class="portfolio-card-text">Приложение</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Проект Boxes</h2>
+                    <p class="portfolio-card-text">Приложение</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img13.jpg" alt="Компьютер фирмы Епл" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img13.jpg" alt="Компьютер фирмы Епл" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Inspiration has no Borders</h2>
-                  <p class="portfolio-card-text">Веб-сайт</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-card-text">Веб-сайт</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img14.jpg" alt="Открытая книга" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img14.jpg" alt="Открытая книга" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Издание Limited Edition</h2>
-                  <p class="portfolio-card-text">Дизайн</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Издание Limited Edition</h2>
+                    <p class="portfolio-card-text">Дизайн</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img15.jpg" alt="Бирка с надписью" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img15.jpg" alt="Бирка с надписью" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Проект LAB</h2>
-                  <p class="portfolio-card-text">Маркетинг</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Проект LAB</h2>
+                    <p class="portfolio-card-text">Маркетинг</p>
+                  </div>
+                </article>
+              </a>
             </li>
             <li class="portfolio-card-item">
-              <article class="portfolio-card">
-                <div class="card-thumb">
-                  <img src="./images/img16.jpg" alt="Руки на клавиатуре ноутбука" width="370" />
-                  <div class="portfolio-card-overlay">
-                    <p class="portfolio-card-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
+              <a href="" class="portfolio-card">
+                <article class="portfolio-card-article">
+                  <div class="card-thumb">
+                    <img src="./images/img16.jpg" alt="Руки на клавиатуре ноутбука" width="370" />
+                    <div class="portfolio-card-overlay">
+                      <p class="portfolio-card-overlay-text">
+                        Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                        компании или частном лице.
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <div class="portfolio-card-content">
-                  <h2 class="portfolio-card-title">Growing Business</h2>
-                  <p class="portfolio-card-text">Приложение</p>
-                </div>
-              </article>
+                  <div class="portfolio-card-content">
+                    <h2 class="portfolio-card-title">Growing Business</h2>
+                    <p class="portfolio-card-text">Приложение</p>
+                  </div>
+                </article>
+              </a>
             </li>
           </ul>
         </div>
