--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="modal">
               <button class="button-close" data-modal-close>
                 <svg class="button-close-svg">
-                  <use href="../images/symbol-defs.svg#button-close"></use>
+                  <use href="./images/symbol-defs.svg#button-close"></use>
                 </svg>
               </button>
             </div>
